// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-snippets GetPartialViewSnippetByIdTool should get a specific partial view snippet by ID 1`] = `
{
  "content": [],
  "structuredContent": {
    "content": "@inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
@using Umbraco.Cms.Core.PublishedCache
@using Umbraco.Cms.Core.Routing
@using Umbraco.Cms.Core.Services.Navigation

@inject IPublishedContentCache PublishedContentCache
@inject IDocumentNavigationQueryService DocumentNavigationQueryService
@inject IPublishedUrlProvider PublishedUrlProvider
@*
    This snippet makes a breadcrumb of parents using an unordered HTML list.

    How it works:
    - It uses the Ancestors method to get all parents and then generates links so the visitor can go back
    - Finally it outputs the name of the current page (without a link)
*@

@{ var selection = Model.Ancestors(PublishedContentCache, DocumentNavigationQueryService).ToArray(); }

@if (selection?.Length > 0)
{
    <ul class="breadcrumb">
        @* For each page in the ancestors collection which have been ordered by Level (so we start with the highest top node first) *@
        @foreach (var item in selection.OrderBy(x => x.Level))
        {
            <li><a href="@item.Url(PublishedUrlProvider)">@item.Name</a> <span class="divider">/</span></li>
        }

        @* Display the current page as the last item in the list *@
        <li class="active">@Model.Name</li>
    </ul>
}",
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "Breadcrumb",
  },
}
`;

exports[`get-snippets GetPartialViewSnippetByIdTool should handle empty snippet ID 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "id": "Breadcrumb",
        "name": "Breadcrumb",
      },
      {
        "id": "EditProfile",
        "name": "Edit Profile",
      },
      {
        "id": "Empty",
        "name": "Empty",
      },
      {
        "id": "ListAncestorsFromCurrentPage",
        "name": "List Ancestors From Current Page",
      },
      {
        "id": "ListChildPagesFromCurrentPage",
        "name": "List Child Pages From Current Page",
      },
      {
        "id": "ListChildPagesOrderedByDate",
        "name": "List Child Pages Ordered By Date",
      },
      {
        "id": "ListChildPagesOrderedByName",
        "name": "List Child Pages Ordered By Name",
      },
      {
        "id": "ListChildPagesWithDoctype",
        "name": "List Child Pages With Doctype",
      },
      {
        "id": "ListDescendantsFromCurrentPage",
        "name": "List Descendants From Current Page",
      },
      {
        "id": "Login",
        "name": "Login",
      },
      {
        "id": "LoginStatus",
        "name": "Login Status",
      },
      {
        "id": "MultinodeTree-picker",
        "name": "Multinode Tree-picker",
      },
      {
        "id": "Navigation",
        "name": "Navigation",
      },
      {
        "id": "RegisterMember",
        "name": "Register Member",
      },
      {
        "id": "SiteMap",
        "name": "Site Map",
      },
    ],
    "total": 15,
  },
}
`;

exports[`get-snippets GetPartialViewSnippetByIdTool should handle invalid snippet ID format 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The partial view was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Partial view not found",
    "type": "Error",
  },
}
`;

exports[`get-snippets GetPartialViewSnippetByIdTool should handle non-existent snippet ID 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The partial view was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Partial view not found",
    "type": "Error",
  },
}
`;

exports[`get-snippets GetPartialViewSnippetTool should get partial view snippets with custom pagination 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Breadcrumb",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Edit Profile",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Empty",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Ancestors From Current Page",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages From Current Page",
      },
    ],
    "total": 15,
  },
}
`;

exports[`get-snippets GetPartialViewSnippetTool should get partial view snippets with default parameters 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Breadcrumb",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Edit Profile",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Empty",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Ancestors From Current Page",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages From Current Page",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages Ordered By Date",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages Ordered By Name",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages With Doctype",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Descendants From Current Page",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Login",
      },
    ],
    "total": 15,
  },
}
`;

exports[`get-snippets GetPartialViewSnippetTool should get partial view snippets with skip parameter 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages Ordered By Date",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages Ordered By Name",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Child Pages With Doctype",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "List Descendants From Current Page",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Login",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Login Status",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Multinode Tree-picker",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Navigation",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Register Member",
      },
      {
        "id": "00000000-0000-0000-0000-000000000000",
        "name": "Site Map",
      },
    ],
    "total": 15,
  },
}
`;

exports[`get-snippets GetPartialViewSnippetTool should handle edge case with very high skip value 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "total": 15,
  },
}
`;
